--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
         crossorigin=""></script>
     </head>
     <body>
-        <div> 
+        <div>
             <p>
-                Welcome to Create Caribbean. Test Environment for the Carib Lit Viz Map. 
+                Welcome to Create Caribbean. Test Environment for the Carib Lit Viz Map.
             </p>
             <p>We are happy you are here to test with us.</p>
         </div>
         <div id="map" style="width: 600px; height: 400px;"></div>>
         </div>
         <script>
+        var L = require('leaflet');
             var map = L.map('map').setView([51.505, -0.09], 13);
 
             L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
