--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
             </p>
             <p>We are happy you are here to test with us.</p>
         </div>
-        <div id="map" style="width: 600px; height: 400px;"></div>>
+        <div id="map" style="width: 600px; height: 400px;"></div>
         </div>
         <script>
             var map = L.map('map').setView([51.505, -0.09], 13);
-
             L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
     attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
     maxZoom: 18,
