--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Leaflet Test Carib Lit</title>
-        <link rel="stylesheet" href="/path/to/leaflet.css" />
-        <script src="/path/to/leaflet.js"></script>
+        <link rel="stylesheet" href="/leaflet.css" />
+        <script src="/leaflet.js"></script>
     </head>
     <body>
         <div>
