--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
                 Welcome to Create Caribbean. Test Environment for the Carib Lit Viz Map.
             </p>
             <p>We are happy you are here to test with us.</p>
+        </div>
         <div id="map" style="width: 600px; height: 400px;"></div>
         <script>
             var map = L.map('map').setView([51.505, -0.09], 13);
+
             var tiles = L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
     attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
     maxZoom: 18,
