--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     id: 'mapbox/streets-v11',
     tileSize: 512,
     zoomOffset: -1,
-    accessToken: 'your.mapbox.access.token'
+    accessToken: 'pk.eyJ1Ijoic2NodXlsZXJlIiwiYSI6ImNsMjk4dHhsZTAxNGQzY3VwNnc1b2Z5d2MifQ.dFwDS9kaYpkp_GbJmN2QOg'
 }).addTo(map);
         </script>
     </body>
