--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </p>
             <p>We are happy you are here to test with us.</p>
         </div>
-        <div id="map" style="width: 600px; height: 400px;"></div>
+        <div id="map" style="width: 100%; height: 800px;"></div>
         <script>
             var map = L.map('map').setView([15.036, -64.81], 7);
 
